# close-my-bank-account

./: .gitignore  README.md  by_bank.json  index.html  pyproject.toml  scrape.py
.github/workflows/: update-data.yml
_app/: version.json
_app/immutable/assets/: 2.CpfTvOtA.css
_app/immutable/chunks/: 8KAcWeAi.js  B5LTvdeu.js  BP3VwZNn.js  CACenPin.js  CJjvDJmS.js  CS-wWuAf.js  D8CyQnRo.js  DWn6Be03.js  DiGlNs_n.js  w6C8D26r.js
_app/immutable/entry/: app.1dMPk2g_.js  app.B2_trbe3.js  app.D3p_tHWK.js  app.DlamOcHS.js  start.Bvi3u5Bk.js  start.CUfmz_ob.js  start.CfwvM-t0.js  start.PObgbNtS.js
_app/immutable/nodes/: 0.Cf8NJJel.js  1.4mwmpVJm.js  1.CCQCipLR.js  1.Cg0OcUeo.js  1.DK7WPcgA.js  2.D_izB6f-.js  2.KDT9F5LU.js  2.TN3uWHKv.js
frontend/: package-lock.json  package.json  svelte.config.js  sync-metadata.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/lib/: BankCard.svelte  MethodChip.svelte  bankScores.ts
frontend/src/routes/: +page.svelte  +page.ts
frontend/static/: by_bank.json
scrape/: by_bank.json  check_changes.py  comments.jsonl  comments_extracted.jsonl  extract_data.py  pyproject.toml  scrape.py
