[project]
name = "close-my-bank-account"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pytz>=2025.2",
    "google-genai>=0.5.4",
    "python-dotenv>=1.0.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "cssselect>=1.3.0",
]

[tool.setuptools]
py-modules = []
